--- a/esp32_Laser/data/style.css
+++ b/esp32_Laser/data/style.css
@@ -71,3 +71,34 @@ input:checked+.slider:before {
     -ms-transform: translateX(52px); 
     transform: translateX(52px);
 }
+
+
+.sl_slider {
+    -webkit-appearance: none;
+    margin: 0 auto;
+    width: 100%;
+    height: 15px;
+    border-radius: 10px;
+    background: #FFD65C;
+    outline: none;
+  }
+.sl_slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #034078;
+    cursor: pointer;
+  }
+.sl_slider::-moz-range-thumb {
+    width: 30px;
+    height: 30px;
+    border-radius: 50% ;
+    background: #034078;
+    cursor: pointer;
+  }
+.sl_switch {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
