--- a/esp32_Laser/data/style.css
+++ b/esp32_Laser/data/style.css
@@ -1,79 +1,49 @@
+
+/*  Complete project details: https://randomnerdtutorials.com/esp32-web-server-websocket-sliders/  */
+
 html {
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
     text-align: center;
-}
-h1 {
-    font-size: 1.8rem; 
+  }
+  h1 {
+    font-size: 1.8rem;
     color: white;
-}
-.topnav { 
-    overflow: hidden; 
+  }
+  p {
+    font-size: 1.4rem;
+  }
+  .topnav {
+    overflow: hidden;
     background-color: #0A1128;
-}
-body {  
+  }
+  body {
     margin: 0;
-}
-.content { 
-    padding: 50px;
-}
-.card-grid { 
-    max-width: 600px; 
-    margin: 0 auto; 
-    display: grid; 
-    gap: 2rem; 
+  }
+  .content {
+    padding: 30px;
+  }
+  .card-grid {
+    max-width: 700px;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-.card { 
-    background-color: white; 
+  }
+  .card {
+    background-color: white;
     box-shadow: 2px 2px 12px 1px rgba(140,140,140,.5);
-}
-.card-title { 
+  }
+  .card-title {
     font-size: 1.2rem;
     font-weight: bold;
     color: #034078
-}
-.state {
+  }
+  .state {
     font-size: 1.2rem;
     color:#1282A2;
-}
-.switch {
-    position: relative; 
-    display: inline-block; 
-    width: 120px; 
-    height: 68px
-} 
-.switch input {
-    display: none
-}
-.slider {
-    position: absolute; 
-    top: 0; left: 0; right: 0; bottom: 0; 
-    background-color: #ccc; 
-    border-radius: 50px
-}
-.slider:before {
-    position: absolute; 
-    content: ""; 
-    height: 52px; 
-    width: 52px; 
-    left: 8px; 
-    bottom: 8px; 
-    background-color: #fff; 
-    -webkit-transition: .4s; 
-    transition: .4s;
-    border-radius: 50px;
-}
-input:checked+.slider {
-    background-color: #b30000;
-}
-input:checked+.slider:before {
-    -webkit-transform: translateX(52px);
-    -ms-transform: translateX(52px); 
-    transform: translateX(52px);
-}
-
-
-.sl_slider {
+  }
+  .slider {
     -webkit-appearance: none;
     margin: 0 auto;
     width: 100%;
@@ -82,7 +52,7 @@ input:checked+.slider:before {
     background: #FFD65C;
     outline: none;
   }
-.sl_slider::-webkit-slider-thumb {
+  .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 30px;
@@ -91,14 +61,15 @@ input:checked+.slider:before {
     background: #034078;
     cursor: pointer;
   }
-.sl_slider::-moz-range-thumb {
+  .slider::-moz-range-thumb {
     width: 30px;
     height: 30px;
     border-radius: 50% ;
     background: #034078;
     cursor: pointer;
   }
-.sl_switch {
+  .sl_switch {
     padding-left: 5%;
     padding-right: 5%;
   }
+  
